--- a/drone_sprayer/pubspec.yaml
+++ b/drone_sprayer/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   simple_animations: ^5.0.0+3
+  hidden_drawer_menu: ^3.0.1
 
 dev_dependencies:
   flutter_test:
