--- a/drone_sprayer/pubspec.yaml
+++ b/drone_sprayer/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   simple_animations: ^5.0.0+3
   hidden_drawer_menu: ^3.0.1
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
