corrected sprayer output calculation

--- a/drone_sprayer/.vscode/settings.json
+++ b/drone_sprayer/.vscode/settings.json
@@ -1,9 +1,3 @@
 {
-    "cSpell.words": [
-        "ARGB",
-        "Cupertino",
-        "Getx",
-        "RGBO",
-        "Schyler"
-    ]
+  "cSpell.words": ["ARGB", "Cupertino", "geolocator", "Getx", "RGBO", "Schyler"]
 }
