--- a/drone_sprayer/pubspec.yaml
+++ b/drone_sprayer/pubspec.yaml
@@ -35,9 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  simple_animations: ^5.0.0+3
-  hidden_drawer_menu: ^3.0.1
   get: ^4.6.5
+  google_maps_flutter: ^2.2.8
+  google_maps_flutter_web: ^0.4.0+9
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
