--- a/drone_sprayer/pubspec.yaml
+++ b/drone_sprayer/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   google_maps_flutter: ^2.2.8
   google_maps_flutter_web: ^0.4.0+9
   geolocator: ^9.0.2
+  firebase_auth: ^4.6.2
+  firebase_analytics: ^10.4.2
+  cloud_firestore: ^4.8.0
+  firebase_core: ^2.13.1
 
 dev_dependencies:
   flutter_test:
