--- a/drone_sprayer/.vscode/settings.json
+++ b/drone_sprayer/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["ARGB", "Cupertino", "geolocator", "Getx", "RGBO", "Schyler"]
+  "cSpell.words": [
+    "ARGB",
+    "Cupertino",
+    "geolocator",
+    "Getx",
+    "RGBO",
+    "Schyler",
+    "signup"
+  ]
 }
